cmake_minimum_required(VERSION 3.31)
project(AIS2203_JetRacer)

set(CMAKE_CXX_STANDARD 20)

set(OpenCV_DIR "C:/Program Files/opencv/build/x64/vc16/lib")

find_package(OpenCV REQUIRED)

# add executables here later
#add_executable(AIS2203_JetRacer test.cpp)
#target_link_libraries(AIS2203_JetRacer PRIVATE ${OpenCV_LIBRARIES})
